cluster/apps/networking/cilium/firewall-rules/allow-global-egress.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-global-egress"
spec:
  endpointSelector: {}
  egress: {}
