cluster/apps/networking/cilium/firewall-rules/allow-global-icmp.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-global-icmp"
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - fromEntities:
        - all
      icmps:
        - fields:
            - type: 8
              family: IPv4
            - type: 0
              family: IPv4
