cluster/apps/networking/cilium/firewall-rules/allow-hubble-ui.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-hubble-ui-to-hubble-relay"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: hubble-ui
      toPorts:
        - ports:
            - port: '4245'
              protocol: TCP
